added popup msg for payment integration on home page

--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
             </div>
 
             <!-- popup-container message : Please Sign-in Frist -->
-            <div id="popup-container" class=" flex gap-2 fixed bottom-20 right-8 px-4 py-2 rounded-full bg-gray-200 ">
+            <div id="popup-container"
+                class=" flex gap-2 fixed z-50 bottom-20 right-8 px-4 py-2 rounded-full bg-gray-200 ">
                 <img src="/assets/img/danger.png" class="w-6 h-6" alt="checkmark">
                 <span id="popupMessage" class="text-md text-black font-semibold "></span>
             </div>
